--- a/spleth.frontend/package.json
+++ b/spleth.frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "alchemy-sdk": "^2.6.1",
     "ethers": "^5.7.2",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
